--- a/didi.css
+++ b/didi.css
@@ -647,6 +647,9 @@ li.paragraph {text-indent: -1em }
   .grid.l3>*{width:33.3333%}
   .grid.l3.space>*{width:32%}
   .grid.l3.space>:nth-child(3n+3){margin-right:0}
+  .grid.l3>.span2{width:66.6666%}
+  .grid.l3.space>.span2{width:64.6666%}
+  .grid.l3>.span3,.grid.l3.space>.span3{width:99.9999%}
   .grid.l4>*{width:25%}
   .grid.l4.space>*{width:23.5%}
   .grid.l4.space>:nth-child(4n+4){margin-right:0}
