added black veil and fixed vspacing css

--- a/didi.css
+++ b/didi.css
@@ -286,6 +286,8 @@ li.paragraph {text-indent: -1em }
 .opaque,.hover-opaque:hover{opacity:1;filter:alpha(opacity=1)}
 .transparent-color{background-color: transparent}
 
+.veil-black{background-color: rgba(0,0,0,.3)}
+
 /* positioning */
 .absolute{position:absolute}
 .fixed{position:fixed }
@@ -424,12 +426,14 @@ li.paragraph {text-indent: -1em }
 .vspace-64+.vspace-64{display:block;margin-top:64px}
 
 /* spacing between - relative */
+
 .hspace-tiny+.hspace-tiny{margin-left:1%}
 .vspace-tiny+.vspace-tiny:before{content:"";display:block;margin-top:1%}
 .hspace-small+.hspace-small{margin-left:2%}
 .vspace-small+.vspace-small:before{content:"";display:block;margin-top:2%}
 .hspace+.hspace,.hspace-medium+.hspace-medium{margin-left:4%}
-.vspace+.vspace:before,.vspace-medium+.vspace-medium:before{content:"";display:block;margin-top:4%}
+.vspace{display:block}
+.vspace+.vspace,.vspace-medium+.vspace-medium{margin-top:4%}
 .hspace-large+.hspace-large{margin-left:6%}
 .vspace-large+.vspace-large:before{content:"";display:block;margin-top:6%}
 
