--- a/didi.css
+++ b/didi.css
@@ -288,7 +288,7 @@ li.paragraph {text-indent: -1em }
 .transparent-8,.hover-transparent-8:hover{opacity:0.80;filter:alpha(opacity=80)}
 .transparent-9,.hover-transparent-9:hover{opacity:0.90;filter:alpha(opacity=90)}
 .opaque,.hover-opaque:hover{opacity:1;filter:alpha(opacity=1)}
-.transparent-color{background-color: transparent}
+.transparent-color,.hover-transparent-color:hover{background-color: transparent}
 
 .veil-black{background-color: rgba(0,0,0,.3)}
 .veil-white{background-color: rgba(255,255,255,.3)}
