added text-outline css

--- a/didi.css
+++ b/didi.css
@@ -255,6 +255,11 @@
 .xxxlarge-font,.font-xxxlarge{font-size:220%}
 .jumbo-font,.font-jumbo{font-size:500%}
 
+
+/* text outline */
+.text-outline {
+  text-shadow: -0.5px -0.5px 0 #000, 0.5px -0.5px 0 #000, -0.5px 0.5px 0 #000, 0.5px 0.5px 0 #000;
+}
 /* hover */
 .hover-shadow:hover{box-shadow:0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)}
 .hover-underline:hover{text-decoration: underline}
