css elipsis class same as truncate-word

--- a/didi.css
+++ b/didi.css
@@ -470,7 +470,7 @@ li.paragraph {text-indent: -1em }
 .undecorated { text-decoration: none; }
 .nowrap { white-space: nowrap}
 .normal-wrap { white-space: normal}
-.truncate-word {  white-space: nowrap; overflow: hidden; text-overflow: ellipsis}
+.truncate-word,.ellipsis { white-space: nowrap; overflow: hidden; text-overflow: ellipsis}
 .break-word{-ms-hyphens: auto;-moz-hyphens: auto;-webkit-hyphens: auto; hyphens: auto;word-wrap: break-word;overflow-wrap:break-word;text-overflow: ellipsis}
 .bullet-disc{ list-style-type: disc}
 
