--- a/didi.css
+++ b/didi.css
@@ -38,6 +38,8 @@
 /* Classed Styles */
 /* animations */
 .spin,.animate-spin,.hover-spin:hover{animation:spin 2s infinite linear;-webkit-animation:spin 2s infinite linear}
+.blink {animation: blinker 1s step-start infinite;}
+
 @-webkit-keyframes spin{
 0%{-webkit-transform:rotate(0deg);transform:rotate(0deg)}100%{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}
 @keyframes spin{
@@ -63,7 +65,11 @@
 .animate-zoom,.hover-zoom:hover {-webkit-animation:animatezoom 0.6s;animation:animatezoom 0.6s}
 @-webkit-keyframes animatezoom{from{-webkit-transform:scale(0)} to{-webkit-transform:scale(1)}}
 @keyframes animatezoom{from{transform:scale(0)} to{transform:scale(1)}}
-
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
 /* border styles */
 .border-width-thin { border-width: 1px;}
 .border-width-small { border-width: 2px;}
