--- a/didi.css
+++ b/didi.css
@@ -327,6 +327,10 @@ li.paragraph {text-indent: -1em }
 .float-right { float: right; }
 .left,.top-left,.bottom-left { left: 0; }
 .margin-0,.nomargin{ margin: 0 }
+.margin-left-min{ margin-left: 0.1em}
+.margin-left-tiny{ margin-left: 0.25em}
+.margin-left-small{ margin-left: 0.5em}
+.margin-left,.margin-left-medium{ margin-left: 1em}
 .middle{ transform: translate(-50%,-50%); transform: ms-translateX(-50%,-50%)}
 .middle-x{ transform: translateX(-50%); transform: ms-translateX(-50%)}
 .middle-y{ transform: translateY(-50%);transform: ms-translateY(-50%)}
@@ -342,6 +346,7 @@ li.paragraph {text-indent: -1em }
 .no-scroll-y { overflow-y: hidden}
 
 /* sizes */
+.zerosize{width:0;height:0}
 .auto-height,.autoheight { height: auto; }
 .auto-width,.autowidth { width: auto; }
 .auto-size,.autosize { width: auto; height: auto; }
