--- a/didi.css
+++ b/didi.css
@@ -461,12 +461,12 @@ li.paragraph {text-indent: -1em }
 .hspace-tiny+.hspace-tiny{margin-left:1%}
 .vspace-tiny+.vspace-tiny:before{content:"";display:block;margin-top:1%}
 .hspace-small+.hspace-small{margin-left:2%}
-.vspace-small+.vspace-small:before{content:"";display:block;margin-top:2%}
+.hspace-small+.hspace-small:before{content:"";display:block;margin-top:2%}
 .hspace+.hspace,.hspace-medium+.hspace-medium{margin-left:4%}
 .vspace{display:block}
 .vspace+.vspace,.vspace-medium+.vspace-medium{margin-top:4%}
 .hspace-large+.hspace-large{margin-left:6%}
-.vspace-large+.vspace-large:before{content:"";display:block;margin-top:6%}
+.vspace-large+.vspace-large{margin-top:6%}
 
 /* text alignment */
 .left-text { text-align: left; }
