--- a/didi.css
+++ b/didi.css
@@ -92,6 +92,8 @@
 .border[class*=border-width-],.hover-border:hover[class*=border-width-] { border-style:solid }
 .borderless,.border-less { border-top-width:0;border-bottom-width:0;border-left-width:0;border-right-width:0}
 .border-collapse{border-collapse: collapse;}
+.border-box{box-sizing: border-box;}
+.content-box{box-sizing: content-box;}
 .no-border-left[class*=border-width-]{ border-left-style: none }
 .no-border-right[class*=border-width-]{ border-right-style: none }
 .no-border-top[class*=border-width-]{ border-left-style: none }
