--- a/didi.css
+++ b/didi.css
@@ -183,7 +183,7 @@
 .text-white,.hover-text-white:hover{color:#fff}
 .text-whitesmoke,.hover-text-white:hover{color:#f5f5f5}
 .text-black,.hover-text-black:hover{color:#000}
-.text-grey,.hover-text-grey:hover{color:#757575}
+.text-grey,.hover-text-grey:hover{color:#9e9e9e}
 .text-light-grey,.hover-text-light-grey:hover{color:#f1f1f1}
 .text-dark-grey,.hover-text-dark-grey:hover{color:#3a3a3a}
 .border-amber,.hover-border-amber:hover{border-color:#ffc107}
